gcc/testsuite/rust/rustc/ui/rfcs/rfc-2396-target_feature-11/issue-108645-target-feature-on-start.rs
//@ only-x86_64

#![feature(start)]
#![feature(target_feature_11)]

#[start]
#[target_feature(enable = "avx2")]
// { dg-error "" "" { target *-*-* } .-1 }
fn start(_argc: isize, _argv: *const *const u8) -> isize { 0 }

